# vvallet

./: .env_sample  .gitignore  Anchor.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  go.mod  go.sum  main.go  package.json  tsconfig.json
app/: README.md  next.config.js  package.json  tailwind.config.js
app/public/docs/: metadata.json
app/src/: manifest.json  setupTests.ts
app/src/__tests__/: App.test.tsx
app/src/components/: ErrorDisplay.tsx  Footer.tsx  Icon.tsx  IdCard.tsx  Loader.tsx  LocalWallet.tsx  ProcessingDisplay.tsx  ProofInput.tsx  SolanaLogo.tsx  SuccessDisplay.tsx  index.tsx
app/src/contexts/: ClientWalletProvider.tsx  ReadOnlyWallet.ts  VVallet.ts
app/src/idl/: vvallet.json
app/src/lib/: ReadOnlyWallet.ts  VVallet.ts  VVallet.tsx
app/src/pages/: _app.tsx  _document.js  index.tsx
app/src/styles/: App.css  globals.css
app/src/types/: constants.ts  dnsTxtRecord.ts  docs.ts  identityAlias.ts  mastodonProof.ts  ownerProof.ts  redditSubmission.ts  tweet.ts
app/src/utils/: crypto.test.ts  crypto.ts  (+10 more)
assets/fxemoji/: LICENSE.md
docs/: Bidirectional_Proof.puml  Environment_Setup.md  Whitepaper.md  environment_setup.md
docs/development/: Contract_Changes.md  Deployment.md  Identity_Proof.puml  Profile_Lookup.puml
internal/: api.go  data.go  error.go  middleware.go  server.go  service.go  service_test.go
internal/v1/: v1.pb.go  v1.pb.gw.go  v1.pb.validate.go  v1.proto  v1_grpc.pb.go
migrations/: deploy.ts
programs/vvallet/: Cargo.toml
programs/vvallet/src/: lib.rs
tests/: vvallet.ts
tools/: tools.go
(+52 files in other folders)
