[package]
name = "vvallet"
version = "1.0.0"
description = "Proof of identity using your crypto wallet"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "vvallet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
